--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -5,6 +5,7 @@
 		
 		<title>Epark</title>
 		<link rel = "stylesheet" type = "text/css" href = "style.RegistrationForm.css" >
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	</head>  
 	<body>
 		<div class = "main">
